# The-Doomed-Ship

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.it.md  README.md  encrypt_files.py  setup.py
docs/: _config.yml  actions.md  allclasses-index.html  allpackages-index.html  annotated.html  annotated_dup.js  classcolored__string-members.html  classcolored__string.html  classcolored__string.js  classes.html  classgame-members.html  classgame.html  classgame.js  classgame_1_1languages-members.html  classgame_1_1languages.html  classgame_1_1languages.js  cmd.md  constant-values.html  cryptography_8h.html  deprecated-list.html  dir_7b5d38f1875f1b693f62ca6a108a1129.html  dir_df38b2a5d584e0f6066b4518b95c638b.html  dir_df38b2a5d584e0f6066b4518b95c638b.js  element-list  files.html  files_dup.js  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_rela.html  functions_vars.html  game_8h.html  game_8h_source.html  globals.html  globals_func.html  help-doc.html  index.html  index.md  map.md  (+25 more)
docs/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  (+13 more)
doxygen/: README.md
res/: strings-it.xml  strings.xml
src/: AstronaveCondannata.rc  AstronaveCondannata.sln  AstronaveCondannata.vcxproj  AstronaveCondannata.vcxproj.filters  CMakeLists.txt  Doxyfile  Doxyfile-mcss  azione.cpp  azione.h  comando.cpp  comando.h  game.cpp  game.h  gioco.cpp  gioco.h  luogo.cpp  luogo.h  main.cpp  oggetto.cpp  oggetto.h  resource.h  utilities.cpp  utilities.h
the_doomed_ship/: __init__.py  __main__.py  cli.py  console.py  game.py
(+103 files in other folders)
